overflow fix

--- a/styling/style.css
+++ b/styling/style.css
@@ -1,6 +1,7 @@
 head,body{
     margin:0;
     cursor:url("https://banner2.kisspng.com/20171220/are/brush-png-image-5a3a8c49308cc6.32260084151378644119891815.jpg"), auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 .contain{
@@ -14,14 +15,15 @@ head,body{
     height: 500px;
     width: 500px;
     border-radius: 25px;
-    border:1px solid black;
+    border:2px solid black;
     background-color: white;  
     position: relative;
+    overflow: hidden;
 }
 
 .my-pallete{
     border-radius: 25px;
-    border:1px solid black;
+    border:2px solid black;
     background-color: #B6798F;
     height: 330px;
     min-width: 8%;
@@ -72,4 +74,14 @@ head,body{
 }
 #brown{
     background: brown;
+}
+button{
+    margin: 5px;
+    color: purple;
+    background-color: lightpink
+}
+#welcome{
+    color: purple;
+    margin:auto;
+    margin-top:15px;
 }
